<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Acting">Acting</string>
    <string name="Actors">Actors</string>
    <string name="Age">Age</string>
    <string name="AppNotAvailable">No app available to handle this action.</string>
    <string name="As">as %s</string>
    <string name="AsActor">As Actor</string>
    <string name="AsCrew">As Crew</string>
    <string name="Birthplace">Birthplace:</string>
    <string name="Born">Born:</string>
    <string name="Budget">Budget:</string>
    <string name="Cancel">Cancel</string>
    <string name="Cast">Cast</string>
    <string name="ContactSubject">Feedback: Cinematics %s</string>
    <string name="CreatedBy">Created By:</string>
    <string name="Credits">Credits</string>
    <string name="DVDReleaseDate">DVD Release Date:</string>
    <string name="Died">Died:</string>
    <string name="DirectedBy">Directed By:</string>
    <string name="DirectedByFormat">More from %s</string>
    <string name="Discover">Discover</string>
    <string name="Filter">Filter</string>
    <string name="FirstAirDate">First Air Date:</string>
    <string name="Images">Images</string>
    <string name="Info">Info</string>
    <string name="LastAirDate">Last Air Date:</string>
    <string name="Menu_ContactDeveloper">Contact Developer</string>
    <string name="Menu_Discover">Discover</string>
    <string name="Menu_Explore">Explore</string>
    <string name="Menu_GooglePlus">Google+ Community</string>
    <string name="Menu_Movies">Movies</string>
    <string name="Menu_PopularPeople">Popular People</string>
    <string name="Menu_Reminders">Reminders</string>
    <string name="Menu_TVShows">TV Shows</string>
    <string name="Menu_UnlockPro">Unlock Pro</string>
    <string name="Movies">Movies</string>
    <string name="NA">N/A</string>
    <string name="Networks">Networks:</string>
    <string name="NoBiographyEntered">Unfortunately, no biography has been entered for this actor.</string>
    <string name="NoOverview">Unfortunately, an overview of the movie has not been provided.</string>
    <string name="NoReminderResults">No reminders set! Set reminders by selecting the alarm icon on a movie with an upcoming release date!</string>
    <string name="NoResultsFound">No results were found…</string>
    <string name="Of">of</string>
    <string name="ReleaseDate">Release Date:</string>
    <string name="Reminder">Reminder</string>
    <string name="ReminderContent">Brought to you by Cinematics: The Movie Guide</string>
    <string name="ReminderDvd">%s DVD is out!</string>
    <string name="ReminderDvdReleaseFormat">DVD Release Date: %s</string>
    <string name="ReminderDvdType">DVD Release Date</string>
    <string name="ReminderPositiveText">Set</string>
    <string name="ReminderRelease">%s releases today!</string>
    <string name="ReminderReleaseFormat">Release Date: %s</string>
    <string name="ReminderReleaseType">Release Date</string>
    <string name="Reminders">Reminders</string>
    <string name="Revenue">Revenue:</string>
    <string name="Reviews">Reviews</string>
    <string name="Search">Search</string>
    <string name="SearchActors">Search Actors…</string>
    <string name="SearchMovies">Search Movies…</string>
    <string name="SearchTVShows">Search TV Shows…</string>
    <string name="Seasons">Seasons</string>
    <string name="SendFeedback">Send Feedback</string>
    <string name="ShareCheckOut">Check out %s</string>
    <string name="ShareItemVia">Share \"%s\" via</string>
    <string name="ShareVia">Share via</string>
    <string name="ShowStatus">Show Status:</string>
    <string name="ShowType">Show Type:</string>
    <string name="SimilarMovies">Similar Movies</string>
    <string name="SimilarTVShows">Similar TV Shows</string>
    <string name="SortResults">Apply Sorting By</string>
    <string name="Sponsored">Sponsored</string>
    <string name="TVShows">TV Shows</string>
    <string name="Tab_IMDbTop250">IMDb Top 250</string>
    <string name="Tab_NewDvdReleases">New DVDs</string>
    <string name="Tab_NowPlaying">Now Playing</string>
    <string name="Tab_Popular">Popular</string>
    <string name="Tab_TopRated">Top Rated</string>
    <string name="Tab_TopRentals">Top Rentals</string>
    <string name="Tab_Upcoming">Upcoming</string>
    <string name="Tab_UpcomingDvdReleases">Upcoming DVDs</string>
    <string name="Toggle">Toggle</string>
    <string name="Trailers">Trailers</string>
    <string name="UrlSearchGoogle">https://play.google.com/store/search?q=%s&amp;c=movies</string>
    <string name="ViewGooglePlay">Google Play Store</string>
    <string name="ViewImdb">View on IMDb</string>
    <string name="ViewMore">View More</string>
    <string name="ViewTmdb">View on Tmdb</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="accept">Accept</string>
    <string name="app_name">Cinematics</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-8830484940449023/1842945396</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">a623203f-cb94-4dce-a273-b83da74749b1</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
</resources>
