<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_home_24dp" android:id="@id/home" android:title="Home" app:showAsAction="always" />
    <item android:icon="@drawable/ic_alarm_24dp" android:id="@id/alarm" android:visible="false" android:title="@string/Reminder" app:showAsAction="always" />
    <item android:icon="@drawable/ic_share_24dp" android:id="@id/share" android:title="@string/ShareVia" app:showAsAction="always" />
    <item android:id="@id/google_play" android:title="@string/ViewGooglePlay" />
    <item android:icon="@drawable/ic_open_in_browser_24dp" android:id="@id/tmdb_browser" android:title="@string/ViewTmdb" />
    <item android:icon="@drawable/ic_open_in_browser_24dp" android:id="@id/imdb_browser" android:title="@string/ViewImdb" />
</menu>