<?xml version="1.0" encoding="utf-8"?>
<com.kkings.cinematics.ui.tvshow.views.TVShowDetailsView android:orientation="vertical" android:id="@id/tvshow_details_container" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_gravity="bottom" android:id="@id/info_container" android:paddingLeft="@dimen/padding_edge" android:paddingRight="@dimen/padding_edge" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontDarkGrayColor" android:id="@id/description" android:background="@drawable/ripple" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="20.0dip" android:maxLines="4" android:lineSpacingMultiplier="1.2" android:fontFamily="sans-serif-condensed" />
        <RelativeLayout android:id="@id/inner_info_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_edge" android:layout_below="@id/description">
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/firstair_date_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/FirstAirDate" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/firstair_date" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/NA" android:layout_toRightOf="@id/firstair_date_static" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/lastair_date_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/LastAirDate" android:layout_below="@id/firstair_date" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/lastair_date" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/NA" android:layout_toRightOf="@id/lastair_date_static" android:layout_below="@id/firstair_date" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/networks_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/Networks" android:layout_below="@id/lastair_date" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/networks" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/NA" android:layout_toRightOf="@id/networks_static" android:layout_below="@id/lastair_date" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/creators_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/CreatedBy" android:layout_below="@id/networks" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/creators" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/NA" android:layout_toRightOf="@id/creators_static" android:layout_below="@id/networks" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/showtype_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/ShowType" android:layout_below="@id/creators" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/showtype" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/NA" android:layout_toRightOf="@id/showtype_static" android:layout_below="@id/creators" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/status_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/ShowStatus" android:layout_below="@id/showtype" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/status" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NA" android:layout_toRightOf="@id/status_static" android:layout_below="@id/showtype" />
        </RelativeLayout>
    </RelativeLayout>
</com.kkings.cinematics.ui.tvshow.views.TVShowDetailsView>