<?xml version="1.0" encoding="utf-8"?>
<com.kkings.cinematics.ui.actor.ActorDetailsView android:orientation="vertical" android:id="@id/actor_details_container" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/actor_info_container" android:paddingLeft="@dimen/padding_edge" android:paddingRight="@dimen/padding_edge" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
        <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontDarkGrayColor" android:id="@id/actor_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="20.0dip" android:text="@string/NoBiographyEntered" android:maxLines="4" android:lineSpacingMultiplier="1.2" android:fontFamily="sans-serif-condensed" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/actor_description">
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/actor_birthday_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/Born" />
            <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontGrayColor" android:id="@id/actor_birthday" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="January 1st, 2015" android:layout_toRightOf="@id/actor_birthday_static" android:fontFamily="sans-serif-condensed" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontGrayColor" android:id="@id/actor_age_static" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Age" android:layout_toRightOf="@id/actor_birthday" />
            <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontGrayColor" android:id="@id/actor_age" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="40" android:layout_toRightOf="@id/actor_age_static" android:fontFamily="sans-serif-condensed" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/actor_death_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/Died" android:layout_below="@id/actor_birthday_static" />
            <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontGrayColor" android:id="@id/actor_deathday" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/actor_death_static" android:layout_below="@id/actor_birthday_static" android:fontFamily="sans-serif-condensed" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/actor_location_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Birthplace" android:layout_below="@id/actor_death_static" />
            <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontGrayColor" android:id="@id/actor_location" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/actor_location_static" android:layout_below="@id/actor_death_static" android:fontFamily="sans-serif-condensed" />
        </RelativeLayout>
    </RelativeLayout>
    <com.kkings.cinematics.ui.views.ActorImageListLayout android:id="@id/actor_images_list" android:background="@color/lightGrayBackgroundColor" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:margin="10.0dip" app:titleId="@string/Images" app:listItemLayoutId="@layout/list_item_image" />
</com.kkings.cinematics.ui.actor.ActorDetailsView>