<?xml version="1.0" encoding="utf-8"?>
<com.kkings.cinematics.ui.movie.MovieDetailsView android:orientation="vertical" android:id="@id/movie_details_container" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_gravity="bottom" android:id="@id/movie_info_container" android:paddingLeft="@dimen/padding_edge" android:paddingRight="@dimen/padding_edge" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontDarkGrayColor" android:id="@id/movie_description" android:background="@drawable/ripple" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="20.0dip" android:maxLines="4" android:lineSpacingMultiplier="1.2" android:fontFamily="sans-serif-condensed" />
        <RelativeLayout android:id="@id/inner_info_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_edge" android:layout_below="@id/movie_description">
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/movie_release_date_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/ReleaseDate" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/movie_release_date" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/movie_release_date_static" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/movie_dvd_date_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/DVDReleaseDate" android:layout_below="@id/movie_release_date_static" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/movie_dvd_date" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NA" android:layout_toRightOf="@id/movie_dvd_date_static" android:layout_below="@id/movie_release_date_static" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/movie_director_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/DirectedBy" android:layout_below="@id/movie_dvd_date_static" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/movie_director" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:layout_toRightOf="@id/movie_director_static" android:layout_below="@id/movie_dvd_date_static" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/movie_budget_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/Budget" android:layout_below="@id/movie_director" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/movie_budget" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/movie_budget_static" android:layout_below="@id/movie_director" />
            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontDarkGrayColor" android:id="@id/movie_revenue_static" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Revenue" android:layout_below="@id/movie_budget_static" />
            <TextView android:textSize="@dimen/font_size" android:id="@id/movie_revenue" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/movie_revenue_static" android:layout_below="@id/movie_budget_static" />
        </RelativeLayout>
    </RelativeLayout>
</com.kkings.cinematics.ui.movie.MovieDetailsView>