<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/main_content" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.google.android.gms.ads.AdView android:id="@id/ad_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/banner_height" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:adSize="SMART_BANNER" app:adUnitId="@string/banner_ad_unit_id" />
        <android.support.design.widget.CoordinatorLayout android:background="@color/whiteBackgroundColor" android:fitsSystemWindows="true" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/ad_view" android:layout_alignParentTop="true">
            <android.support.design.widget.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@id/appbar" android:background="@color/darkBackgroundColor" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <android.support.design.widget.CollapsingToolbarLayout android:id="@id/collapsing_toolbar" android:background="@color/darkBackgroundColor" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_scrollFlags="exitUntilCollapsed|scroll" app:expandedTitleTextAppearance="@style/ActorToolbarTextExpanded" app:collapsedTitleTextAppearance="@style/ToolbarTextCollapsed" app:contentScrim="@color/darkBackgroundColor" app:statusBarScrim="@color/darkBackgroundColor" app:layout_collapseMode="parallax">
                    <RelativeLayout android:fitsSystemWindows="true" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <RelativeLayout android:id="@id/image_container" android:fitsSystemWindows="true" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <android.support.v4.view.ViewPager android:id="@id/backdrop_pager" android:fitsSystemWindows="true" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="@dimen/backdrop_height" android:minHeight="@dimen/backdrop_height" />
                            <com.viewpagerindicator.CirclePageIndicator android:id="@id/pager_indicator" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignBottom="@id/backdrop_pager" app:fillColor="@color/fontWhiteColor" app:radius="4.0dip" />
                        </RelativeLayout>
                        <RelativeLayout android:gravity="bottom" android:id="@id/title_container" android:background="@color/darkBackgroundColor" android:paddingLeft="@dimen/padding_edge" android:paddingTop="@dimen/padding_edge" android:paddingRight="@dimen/padding_edge" android:paddingBottom="@dimen/padding_edge" android:visibility="visible" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/image_container">
                            <com.kkings.cinematics.ui.views.AspectRatioImageViewPoster android:id="@id/tvshow_poster" android:background="@color/darkBackgroundColor" android:layout_width="@dimen/movie_poster_width_details" android:layout_height="wrap_content" android:layout_marginTop="@dimen/movie_clip_margin" />
                            <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontGrayColor" android:id="@id/tvshow_rating" android:background="@drawable/text_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_edge" android:text="@string/NA" android:layout_toRightOf="@id/tvshow_poster" android:fontFamily="sans-serif-condensed" />
                            <TextView android:textSize="@dimen/font_size" android:textStyle="bold" android:textColor="@color/fontGrayColor" android:id="@id/tvshow_year" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/NA" android:drawableLeft="@drawable/text_circle" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/tvshow_rating" android:fontFamily="sans-serif-condensed" />
                            <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontGrayColor" android:id="@id/tvshow_runtime" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NA" android:drawableLeft="@drawable/text_circle" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/tvshow_year" android:fontFamily="sans-serif-condensed" />
                            <TextView android:textSize="@dimen/font_toolbar_size" android:textStyle="bold" android:textColor="@color/fontWhiteColor" android:id="@id/tvshow_title" android:paddingLeft="@dimen/padding_edge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_toRightOf="@id/tvshow_poster" android:layout_below="@id/tvshow_year" android:fontFamily="sans-serif-condensed" />
                            <TextView android:textSize="@dimen/font_size" android:textColor="@color/fontWhiteColor" android:id="@id/tvshow_genres" android:paddingLeft="@dimen/padding_edge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/tvshow_poster" android:layout_below="@id/tvshow_title" android:fontFamily="sans-serif-condensed" />
                        </RelativeLayout>
                    </RelativeLayout>
                    <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_collapseMode="pin" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
                </android.support.design.widget.CollapsingToolbarLayout>
                <android.support.design.widget.TabLayout android:id="@id/tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </android.support.design.widget.AppBarLayout>
            <android.support.v4.view.ViewPager android:id="@id/pager" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:layout_width="50.0dip" android:layout_height="50.0dip" android:indeterminate="true" />
        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>